# uvcurl

./: CMakeLists.txt  README.md
cmake/: FindLibuv.cmake
test/: CMakeLists.txt  main.c  main.cpp  qqauth.cpp  uvget.c  uvget.cpp
uvcurl/: CMakeLists.txt  Multi.hpp  macro.h  multi.c  multi.h  uvcurl.h
